# imei_checker

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile
docker/bot/: .dockerignore  Dockerfile
migrations/: env.py
migrations/versions/: 65e82869525d_initial_migration.py
scripts/: entrypoint.sh
src/: .all_project_code.txt  .gather_all_project_code.py
src/api/: main.py
src/api/controllers/: imei.py
src/api/repositories/: users.py
src/api/schemas/: auth.py  imei.py
src/api/services/: imei.py
src/bot/: main.py
src/bot/handlers/: imei.py
src/bot/middlewares/: auth.py
src/core/: config.py  database.py  logger.py  users.csv  users.sql
src/models/: user.py
