[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
pydantic = "^2.3.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
asyncpg = "^0.28.0"
loguru = "^0.7.2"
python-jose = "^3.3.0"
aiohttp = "^3.11.11"
aiogram = "^3.17.0"
